# rag-docs-engine

./: RAG_Pipeline_Documentation.md  README.md  mdata  pyproject.toml  requirements.txt  run_local.py  setup_instructions.md  streamlit_app.py
.streamlit/: secrets.toml
attached_assets/: KV_and_Completeness_forms_1749495950122.py  Pasted-TypeError-Object-of-type-ChatCompletionResponse-is-not-JSON-serializable-Traceback-File-home-r-1749497581139_1749497581140.txt  Summarization_forms_1749495915677.py  ocr_utils_1749495892679.py  requirements.txt_1749495915673.txt  streamlit_combined_1749495915676.py
formp/: pyvenv.cfg
formp/Scripts/: activate  activate.bat
modules/: chatbot.py  data_analyzer.py  form_utils.py  ocr_processor.py  rag_utils.py
